kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gobelvl2
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: gobelvl2
  template:
    metadata:
      labels:
        app: gobelvl2
    spec:
      containers:
        - name: gobelvl2
          image: docker.io/grrrvahrrr/gobelvl2:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /__heartbeat__
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path:  /__heartbeat__
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1
