kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gobelvl2-srv
spec:
  type: NodePort
  ports:
    - name: http
      port: 9090
      targetPort: 8080
  selector:
    app: gobelvl2
